Don't assume QLocale::codecForLocale always returns non-null

It may return null during program exit, due to QCoreGlobalData global
static already having been destroyed. If that's the case, QTextStream
needs to fall back to Latin 1, like QString::toLocal8Bit and
fromLocal8Bit already do.

Task-number: QTBUG-38316
Change-Id: I5949c8dec15b60f4a13b5d9307ed6abfc799fe20
Reviewed-by: Olivier Goffart <ogoffart@woboq.com>

cregit: f2a40fa07123748ece2fc93790345379f15ef07f https://github.com/qt/qtbase/commit/f2a40fa07123748ece2fc93790345379f15ef07f